--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
   <title>ottergram</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="stylesheets/style.css">
-  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 </head>
 
@@ -36,7 +36,7 @@
 
     <ul class="thumbnail-list">
       <li class="thumbnail-item">
-        <a href="#">
+        <a href="img/otter1.jpg" data-image-role="trigger" data-image-title="Stayin' Alive" data-image-url="img/otter1.jpg">
           <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the otter">
           <span class="thumbnail-title">
             Barry
@@ -45,7 +45,7 @@
       </li>
 
       <li class="thumbnail-item">
-        <a href="#">
+        <a href="img/otter2.jpg" data-image-role="trigger" data-image-title="How Deep Is Your Love" data-image-url="img/otter2.jpg">
           <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the otter">
           <span class="thumbnail-title">
             Robin
@@ -54,7 +54,7 @@
       </li>
 
       <li class="thumbnail-item">
-        <a href="#">
+        <a href="img/otter3.jpg" data-image-role="trigger" data-image-title="You Should Be Dancing" data-image-url="img/otter3.jpg">
           <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the otter">
           <span class="thumbnail-title">
             Maurice
@@ -63,7 +63,7 @@
       </li>
 
       <li class="thumbnail-item">
-        <a href="#">
+        <a href="img/otter4.jpg" data-image-role="trigger" data-image-title="Night Fever" data-image-url="img/otter4.jpg">
           <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the otter">
           <span class="thumbnail-title">
             Lesley
@@ -72,53 +72,8 @@
       </li>
 
       <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter1.jpg" alt="Barbara the otter">
-          <span class="thumbnail-title">
-            Barbara
-          </span>
-        </a>
-      </li>
-
-      <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the otter">
-          <span class="thumbnail-title">
-            Barry
-          </span>
-        </a>
-      </li>
-
-      <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the otter">
-          <span class="thumbnail-title">
-            Robin
-          </span>
-        </a>
-      </li>
-
-      <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the otter">
-          <span class="thumbnail-title">
-            Maurice
-          </span>
-        </a>
-      </li>
-
-      <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the otter">
-          <span class="thumbnail-title">
-            Lesley
-          </span>
-        </a>
-      </li>
-
-      <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter1.jpg" alt="Barbara the otter">
+        <a href="img/otter5.jpg" data-image-role="trigger" data-image-title="To Love Somebody" data-image-url="img/otter5.jpg">
+          <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the otter">
           <span class="thumbnail-title">
             Barbara
           </span>
@@ -129,13 +84,13 @@
 
     <div class="detail-image-container">
       <div class="detail-image-frame">
-        <img src="img/otter1.jpg" alt="" class="detail-image">
-        <span class="detail-image-title">Stayin' Alive</span>
+        <img src="img/otter1.jpg" alt="" class="detail-image" data-image-role="target">
+        <span class="detail-image-title" data-image-role="title">Stayin' Alive</span>
       </div>
     </div>
 
   </main>
-
+<script src="scripts/main.js"></script>
 </body>
 
 </html>
